[package]
name = "lzma_tarball"
version = "0.0.3"
edition = "2021"
description = "A simple library for reading and writing tarballs with lzma compression."
license-file = "LICENSE"
authors = ["Drew Chase"]
categories = ["compression", "filesystem", "data-structures"]
keywords = ["tarball", "compression", "archive", "lzma", "tar"]


[dependencies]
xz2 = { version = "0.1.7", features = ["tokio", "tokio-io"] }
log = { version = "0.4.22", optional = true }
tar = "0.4.43"
chrono = { version = "0.4.38", features = ["now"] }

[features]
compression = []
decompression = []
log = ["dep:log"]