[package]
name = "lzma_tarball"
version = "0.1.1"
edition = "2021"
description = "A simple library for reading and writing tarballs with lzma compression."
license-file = "LICENSE"
authors = ["Drew Chase"]
categories = ["compression", "filesystem", "data-structures"]
keywords = ["tarball", "compression", "archive", "lzma", "tar"]
repository = "https://github.com/Drew-Chase/lzma_tarball"
readme = "README.md"


[dependencies]
xz2 = { version = "0.1.7", features = ["tokio", "tokio-io"] }
log = { version = "0.4.22", optional = true }
tar = "0.4.43"
chrono = { version = "0.4.38", features = ["now"] }
walkdir = { version = "2.5.0" }
anyhow = "1.0.95"

[features]
default = ["decompression", "compression"]
compression = []
decompression = []
log = ["dep:log"]


[dev-dependencies]
log = "0.4.22"